fetch bindinggraphvalidation